#161 Refactor GameAnnouncement to Java record with builder