@@ -1,9 +1,7 @@
-
 package org.jskat.data;
 
 
 import org.jskat.AbstractJSkatTest;
-import org.jskat.data.GameAnnouncement.GameAnnouncementFactory;
 import org.jskat.util.Card;
 import org.jskat.util.CardList;
 import org.jskat.util.GameType;
@@ -24,7 +22,11 @@ import static org.junit.jupiter.api.Assertions.assertNull;
  */
 public class GameAnnouncementTest extends AbstractJSkatTest {
 
-    private static final CardList VALID_DISCARDED_CARDS = new CardList(Card.CJ, Card.SJ);
+    private static final CardList VALID_DISCARDED_CARDS = CardList.of(Card.CJ, Card.SJ);
+    private static final CardList VALID_OUVERT_CARDS = CardList.of(
+            Card.C7, Card.S7, Card.H7, Card.D7,
+            Card.C8, Card.S8, Card.H8, Card.D8,
+            Card.C9, Card.S9);
 
     private static final Set<GameAnnouncement> validAnnouncements = new HashSet<>();
 
@@ -37,16 +39,12 @@ public class GameAnnouncementTest extends AbstractJSkatTest {
         validAnnouncements.add(createNullOuvertWithoutDiscardedCards());
         validAnnouncements.add(createNullHandOuvert());
 
-        for (final GameType suitGrand : Arrays.asList(GameType.GRAND,
-                GameType.CLUBS, GameType.SPADES, GameType.HEARTS,
-                GameType.DIAMONDS)) {
-            validAnnouncements
-                    .add(createSuitGrandWithoutDiscardedCards(suitGrand));
+        for (final GameType suitGrand : List.of(GameType.GRAND, GameType.CLUBS, GameType.SPADES, GameType.HEARTS, GameType.DIAMONDS)) {
+            validAnnouncements.add(createSuitGrandWithoutDiscardedCards(suitGrand));
             validAnnouncements.add(createSuitGrand(suitGrand));
             validAnnouncements.add(createSuitGrandHand(suitGrand));
             validAnnouncements.add(createSuitGrandHandSchneider(suitGrand));
-            validAnnouncements
-                    .add(createSuitGrandHandSchneiderSchwarz(suitGrand));
+            validAnnouncements.add(createSuitGrandHandSchneiderSchwarz(suitGrand));
             validAnnouncements.add(createSuitGrandOuvert(suitGrand));
         }
 
@@ -57,113 +55,68 @@ public class GameAnnouncementTest extends AbstractJSkatTest {
     }
 
     private static GameAnnouncement createRamsch() {
-        final GameAnnouncement result = new GameAnnouncement();
-        result.gameType = GameType.RAMSCH;
-        return result;
+        return new GameAnnouncement(GameType.RAMSCH);
     }
 
     private static GameAnnouncement createPassedIn() {
-        final GameAnnouncement result = new GameAnnouncement();
-        result.gameType = GameType.PASSED_IN;
-        return result;
+        return new GameAnnouncement(GameType.PASSED_IN);
     }
 
     private static GameAnnouncement createSuitGrand(final GameType gameType) {
-        final GameAnnouncement result = new GameAnnouncement();
-        result.gameType = gameType;
-        result.discardedCards = VALID_DISCARDED_CARDS;
+        final var result = new GameAnnouncement(gameType);
+        builder.discardedCards = VALID_DISCARDED_CARDS;
         return result;
     }
 
     @Deprecated
-    private static GameAnnouncement createSuitGrandWithoutDiscardedCards(
-            final GameType gameType) {
-        final GameAnnouncement result = new GameAnnouncement();
-        result.gameType = gameType;
-        return result;
+    private static GameAnnouncement createSuitGrandWithoutDiscardedCards(final GameType gameType) {
+        return new GameAnnouncement(gameType);
     }
 
     private static GameAnnouncement createSuitGrandHand(final GameType gameType) {
-        final GameAnnouncement result = new GameAnnouncement();
-        result.gameType = gameType;
-        result.hand = Boolean.TRUE;
-        return result;
+        return new GameAnnouncement(gameType, true);
     }
 
-    private static GameAnnouncement createSuitGrandHandSchneider(
-            final GameType gameType) {
-        final GameAnnouncement result = new GameAnnouncement();
-        result.gameType = gameType;
-        result.hand = Boolean.TRUE;
-        result.schneider = Boolean.TRUE;
-        return result;
+    private static GameAnnouncement createSuitGrandHandSchneider(final GameType gameType) {
+        return new GameAnnouncement(gameType, true, true);
     }
 
-    private static GameAnnouncement createSuitGrandHandSchneiderSchwarz(
-            final GameType gameType) {
-        final GameAnnouncement result = new GameAnnouncement();
-        result.gameType = gameType;
-        result.hand = Boolean.TRUE;
-        result.schneider = Boolean.TRUE;
-        result.schwarz = Boolean.TRUE;
-        return result;
+    private static GameAnnouncement createSuitGrandHandSchneiderSchwarz(final GameType gameType) {
+        return new GameAnnouncement(gameType, true, true, true);
     }
 
-    private static GameAnnouncement createSuitGrandOuvert(
-            final GameType gameType) {
-        GameAnnouncement.getFactory();
-        final GameAnnouncement result = new GameAnnouncement();
-        result.gameType = gameType;
-        result.hand = Boolean.TRUE;
-        result.ouvert = Boolean.TRUE;
-        result.schneider = Boolean.TRUE;
-        result.schwarz = Boolean.TRUE;
-        return result;
+    private static GameAnnouncement createSuitGrandOuvert(final GameType gameType) {
+        return new GameAnnouncement(gameType, true, true, true, true, VALID_OUVERT_CARDS);
     }
 
     @Deprecated
     private static GameAnnouncement createNullWithoutDiscardedCards() {
-        final GameAnnouncement result = new GameAnnouncement();
-        result.gameType = GameType.NULL;
-        return result;
+        return new GameAnnouncement(GameType.NULL);
     }
 
     private static GameAnnouncement createNull() {
-        final GameAnnouncement result = new GameAnnouncement();
-        result.gameType = GameType.NULL;
+        final GameAnnouncement result = new GameAnnouncement(GameType.NULL);
         result.discardedCards = VALID_DISCARDED_CARDS;
         return result;
     }
 
     private static GameAnnouncement createNullHand() {
-        final GameAnnouncement result = new GameAnnouncement();
-        result.gameType = GameType.NULL;
-        result.hand = Boolean.TRUE;
-        return result;
+        return new GameAnnouncement(GameType.NULL, true);
     }
 
     @Deprecated
     private static GameAnnouncement createNullOuvertWithoutDiscardedCards() {
-        final GameAnnouncement result = new GameAnnouncement();
-        result.gameType = GameType.NULL;
-        result.ouvert = Boolean.TRUE;
-        return result;
+        return new GameAnnouncement(GameType.NULL, true, VALID_OUVERT_CARDS);
     }
 
     private static GameAnnouncement createNullOuvert() {
-        final GameAnnouncement result = new GameAnnouncement();
-        result.gameType = GameType.NULL;
-        result.ouvert = Boolean.TRUE;
+        final GameAnnouncement result = new GameAnnouncement(GameType.NULL, true, VALID_OUVERT_CARDS);
         result.discardedCards = VALID_DISCARDED_CARDS;
         return result;
     }
 
     private static GameAnnouncement createNullHandOuvert() {
-        final GameAnnouncement result = new GameAnnouncement();
-        result.gameType = GameType.NULL;
-        result.hand = Boolean.TRUE;
-        result.ouvert = Boolean.TRUE;
-        return result;
+        return new GameAnnouncement(GameType.NULL, true, true, VALID_OUVERT_CARDS);
     }
 
     @Test
@@ -179,17 +132,19 @@ public class GameAnnouncementTest extends AbstractJSkatTest {
         for (final GameType gameType : GameType.values()) {
             for (final Boolean isHand : getAllBooleanExpressions()) {
                 for (final Boolean isOuvert : getAllBooleanExpressions()) {
-                    for (final Boolean isSchneider : getAllBooleanExpressions()) {
-                        for (final Boolean isSchwarz : getAllBooleanExpressions()) {
-                            for (final CardList discardedCards : getAllDiscardedCardsExpressions()) {
+                    for (final CardList ouvertCards : getAllOuvertCardsExpressions()) {
+                        for (final Boolean isSchneider : getAllBooleanExpressions()) {
+                            for (final Boolean isSchwarz : getAllBooleanExpressions()) {
+                                for (final CardList discardedCards : getAllDiscardedCardsExpressions()) {
 
-                                final GameAnnouncement announcement = prepareAnnouncement(
-                                        gameType, isHand, isOuvert,
-                                        isSchneider, isSchwarz, discardedCards);
+                                    final GameAnnouncement announcement = prepareAnnouncement(
+                                            gameType, isHand, isOuvert, ouvertCards,
+                                            isSchneider, isSchwarz, discardedCards);
 
-                                testAnnouncement(announcement, gameType,
-                                        isHand, isOuvert, isSchneider,
-                                        isSchwarz, discardedCards);
+                                    testAnnouncement(announcement, gameType,
+                                            isHand, isOuvert, ouvertCards, isSchneider,
+                                            isSchwarz, discardedCards);
+                                }
                             }
                         }
                     }
@@ -199,22 +154,19 @@ public class GameAnnouncementTest extends AbstractJSkatTest {
     }
 
     private static void testAnnouncement(final GameAnnouncement announcement,
-                                         final GameType gameType, final Boolean isHand,
-                                         final Boolean isOuvert, final Boolean isSchneider,
-                                         final Boolean isSchwarz, final CardList discardedCards) {
+                                         final GameType gameType,
+                                         final boolean isHand,
+                                         final boolean isOuvert,
+                                         final CardList ouvertCards,
+                                         final boolean isSchneider,
+                                         final boolean isSchwarz,
+                                         final CardList discardedCards) {
 
         if (isValidAnnouncement(announcement)) {
-            checkAnnouncement(announcement, gameType, isHand, isOuvert,
-                    isSchneider, isSchwarz, discardedCards);
+            checkAnnouncement(announcement, gameType, isHand, isOuvert, ouvertCards, isSchneider, isSchwarz, discardedCards);
         } else {
-            // cross check
-            final GameAnnouncement ann = new GameAnnouncement();
-            ann.gameType = gameType;
-            ann.hand = isHand;
-            ann.ouvert = isOuvert;
-            ann.schneider = isSchneider;
-            ann.schwarz = isSchwarz;
-            ann.discardedCards = discardedCards;
+            // cross-check
+            final GameAnnouncement ann = new GameAnnouncement(gameType, isHand, isSchneider, isSchwarz, isOuvert, ouvertCards);
 
             assertFalse(validAnnouncements.contains(ann));
             assertNull(announcement);
@@ -222,43 +174,69 @@ public class GameAnnouncementTest extends AbstractJSkatTest {
     }
 
     private static GameAnnouncement prepareAnnouncement(final GameType gameType,
-                                                        final Boolean isHand, final Boolean isOuvert,
-                                                        final Boolean isSchneider, final Boolean isSchwarz,
+                                                        final boolean isHand,
+                                                        final boolean isOuvert,
+                                                        final CardList ouvertCards,
+                                                        final boolean isSchneider,
+                                                        final boolean isSchwarz,
                                                         final CardList discardedCards) {
 
-        final GameAnnouncementFactory factory = GameAnnouncement.getFactory();
-        factory.setGameType(gameType);
-        factory.setHand(isHand);
-        factory.setOuvert(isOuvert);
-        factory.setSchneider(isSchneider);
-        factory.setSchwarz(isSchwarz);
+        final var builder = GameAnnouncement.builder(gameType);
+        if (isHand) {
+            builder.hand();
+        }
+        if (isSchneider) {
+            builder.schneider();
+        }
+        if (isSchwarz) {
+            builder.schwarz();
+        }
+        if (isOuvert) {
+            builder.ouvert(ouvertCards);
+        }
         factory.setDiscardedCards(discardedCards);
 
-        final GameAnnouncement announcement = factory.getAnnouncement();
-        return announcement;
+        return builder.build();
     }
 
     private static void checkAnnouncement(final GameAnnouncement announcement,
-                                          final GameType gameType, final Boolean isHand,
-                                          final Boolean isOuvert, final Boolean isSchneider,
-                                          final Boolean isSchwarz, final CardList discardedCards) {
-        assertThat(announcement.gameType).isEqualTo(gameType);
-        assertThat(announcement.hand).isEqualTo(isHand);
-        assertThat(announcement.ouvert).isEqualTo(isOuvert);
-        assertThat(announcement.schneider).isEqualTo(isSchneider);
-        assertThat(announcement.schwarz).isEqualTo(isSchwarz);
-        assertThat(announcement.discardedCards).isEqualTo(discardedCards);
+                                          final GameType gameType,
+                                          final boolean isHand,
+                                          final boolean isOuvert,
+                                          final CardList ouvertCards,
+                                          final boolean isSchneider,
+                                          final boolean isSchwarz,
+                                          final CardList discardedCards) {
+        assertThat(announcement.gameType()).isEqualTo(gameType);
+        assertThat(announcement.hand()).isEqualTo(isHand);
+        assertThat(announcement.ouvert()).isEqualTo(isOuvert);
+        if (isOuvert) {
+            assertThat(announcement.ouvertCards()).containsExactlyElementsOf(ouvertCards);
+        } else {
+            assertThat(announcement.ouvertCards()).isEmpty();
+        }
+        assertThat(announcement.schneider()).isEqualTo(isSchneider);
+        assertThat(announcement.schwarz()).isEqualTo(isSchwarz);
+        assertThat(announcement.discardedCards()).containsExactlyElementsOf(discardedCards);
     }
 
-    private static boolean isValidAnnouncement(
-            final GameAnnouncement announcement) {
+    private static boolean isValidAnnouncement(final GameAnnouncement announcement) {
         return validAnnouncements.contains(announcement);
     }
 
     private static List<CardList> getAllDiscardedCardsExpressions() {
-        return Arrays.asList(new CardList(),
-                new CardList(Arrays.asList(Card.CJ)), VALID_DISCARDED_CARDS,
-                new CardList(Arrays.asList(Card.CJ, Card.SJ, Card.HJ)));
+        return Arrays.asList(
+                new CardList(),
+                CardList.of(Card.CJ),
+                VALID_DISCARDED_CARDS,
+                CardList.of(Card.CJ, Card.SJ, Card.HJ));
+    }
+
+    private static List<CardList> getAllOuvertCardsExpressions() {
+        return Arrays.asList(
+                new CardList(),
+                VALID_OUVERT_CARDS,
+                CardList.of(Card.values()));
     }
 
     private static List<Boolean> getAllBooleanExpressions() {
